# python-xliff

./: LICENSE  README.md  TODO  pyproject.toml  ruff.toml  xliff-core-1.2-strict.xsd
src/python_xliff/: Extras.py  utils.py
src/python_xliff/Inline/: Inline.py  __init__.py
src/python_xliff/NamedGroups/: NamedGroups.py  __init__.py  utils.py
src/python_xliff/Objects/: Inline.py  NamedGroups.py  Structural.py  TopLevel.py  extras.py
src/python_xliff/Structural/: Structural.py  __init__.py
src/python_xliff/TopLevel/: TopLevel.py  __init__.py
src/python_xliff/objects/: enums.py  named_groups.py  structural.py
src/python_xliff/utils/: validators.py
src/xliff/: __init__.py  constants.py  errors.py  helpers.py  named_groups.py  objects.py  structural.py  utils.py
tests/: test_named_groups.py  test_utils.py
tests/test_named_groups/: test_context.py  test_context_group.py  test_count.py  test_count_group.py  test_prop.py  test_prop_group.py
