[project]
name = "python-xliff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Enzo Agosta" }]
requires-python = ">=3.13"
dependencies = ["langcodes>=3.5.0", "pydantic>=2.11.3", "pydantic-xml>=2.15.0"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = []
dev = ["mypy>=1.15.0"]
[tool.mypy]
plugins = ["pydantic_xml.mypy"]
