[project]
name = "xliff"
version = "0.1.0"
description = "Python Library to create and manipulate xliff files"
readme = "README.md"
authors = [
    { name = "Enzo Agosta" }
]
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.4.0",
    "types-lxml>=2025.3.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.10",
]
tests = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
